--- a/android-rest-client-template-master/app/src/main/res/menu/menu_main.xml
+++ b/android-rest-client-template-master/app/src/main/res/menu/menu_main.xml
@@ -3,14 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/miCompose"
-        android:icon="@drawable/ic_compose"
+        android:icon="@drawable/ic_action_name"
         app:showAsAction="ifRoom"
         android:title="Compose">
     </item>
-    <item
-        android:id="@+id/miProfile"
-        android:icon="@drawable/ic_profile"
-        app:showAsAction="ifRoom|withText"
-        android:title="Profile">
-    </item>
+
 </menu>
