--- a/android-rest-client-template-master/app/src/main/res/layout/activity_compose.xml
+++ b/android-rest-client-template-master/app/src/main/res/layout/activity_compose.xml
@@ -38,4 +38,14 @@
         app:layout_constraintStart_toEndOf="@+id/etTweetInput"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.023" />
+
+    <TextView
+        android:id="@+id/tvCharCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="24dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnsend" />
 </android.support.constraint.ConstraintLayout>
